# SI-POS

./: .gitignore  MANIFEST.in  README.md  license.txt  pyproject.toml  requirements.txt
si_pos/: hooks.py  modules.txt  patches.txt
si_pos/api/: __init__.py  barcode_stock.py  cash_control.py  cash_shift.py  pos_actions.py  pos_config.py  returns.py  si_pos.py
si_pos/public/js/: si_pos_cash_shift_v1.js  si_pos_cash_shift_v2.js  si_pos_cash_tools_v1.js  si_pos_closing_v2.js  si_pos_closing_v3.js  si_pos_extras.js  si_pos_header_tools_v2.js  si_pos_phase4.js  si_pos_phase5.js  si_pos_print_patch.js  si_pos_scan_compact_v1.js  si_pos_shift_guard_v1.js  si_pos_shift_guard_v2.js  si_pos_shift_lock_v1.js  si_pos_shift_status_v3.js  si_pos_stock_items_v1.js
si_pos/si_pos/: __init__.py
si_pos/si_pos/config/: desktop.py
si_pos/si_pos/doctype/si_pos_bank_deposit/: __init__.py  si_pos_bank_deposit.json  si_pos_bank_deposit.py
si_pos/si_pos/doctype/si_pos_cash_denomination/: __init__.py  si_pos_cash_denomination.json  si_pos_cash_denomination.py
si_pos/si_pos/doctype/si_pos_cash_shift/: __init__.py  si_pos_cash_shift.json  si_pos_cash_shift.py
si_pos/si_pos/doctype/si_pos_daily_expense/: __init__.py  si_pos_daily_expense.json  si_pos_daily_expense.py
si_pos/si_pos/doctype/si_pos_settings/: __init__.py  si_pos_settings.json  si_pos_settings.py
si_pos/si_pos/page/si_pos/: __init__.py  si_pos.js  si_pos.json
